--- a/info.yaml
+++ b/info.yaml
@@ -4,7 +4,7 @@ project:
   title:        "DigOTA"      # Project title
   author:       "Ali Meimandi"      # Your name
   discord:      ""      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
-  description:  ""      # One line description of what your project does
+  description:  "It works as a digital based OTA"      # One line description of what your project does
   language:     "Wokwi" # other examples include SystemVerilog, Amaranth, VHDL, etc
   clock_hz:     50000       # Clock frequency in Hz (or 0 if not applicable)
 
